Inclusao do código activate no email de ativacao e inclusao das variaveis nos templates html

--- a/backend/newsletter/templates/activate_subscription.html
+++ b/backend/newsletter/templates/activate_subscription.html
@@ -245,7 +245,8 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:18px;font-style:normal;font-weight:normal;text-align: center;color: rgb(79, 78, 78);  height: 90px; width:600px; padding: 10px; background-color: #F4F4F4;"><strong>Customize your experience with our occultation prediction database!
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:17px;font-style:normal;font-weight:normal;text-align: center;color: rgb(79, 78, 78);  height: 50px; width:600px; padding: 10px; background-color: #F4F4F4;">
+                            <strong>Customize your experience with our occultation prediction database!
                         </strong>
                         </div>
                     </td>
@@ -259,10 +260,18 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: justify;color: rgb(79, 78, 78);  height: 50px; width:570px; padding: 10px; background-color: #F4F4F4;">Stay informed about celestial phenomena by subscribing to receive personalized predictions of occultations by small Solar System bodies. With millions of events occurring annually, you can customize your subscription to align with your specific interests and geographic location. Take the opportunity to explore the cosmos with us by
-                            <a href="#" style="color:#FB1010;font-weight: bold; text-decoration: none;"  target="_blank">clicking here.</a> <br> 
-                            <!--*** Aqui vem print da tela com formulario e instrucoes-->
-                        </div>
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: center;color: rgb(79, 78, 78);  height: 40px; width:570px; padding: 10px; background-color: #F4F4F4;">
+                            Stay informed about celestial phenomena by subscribing to receive personalized predictions of occultations by small Solar System bodies.<br>
+                            First, confirm your subscription by clicking the link below:<br>
+                         </div>
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: center;color: rgb(79, 78, 78);  height: 40px; width:570px; padding: 10px; background-color: #F4F4F4;">
+                           <form action="" method="post">
+                               <button style="font-family:Roboto, Helvetica, Arial, sans-serif; font-weight:bold; font-size:18px;border-radius: 6px; background-color: #0076BC; color: #F4F4F4; cursor: pointer;" type="submit" name="email"><a href=http://localhost/api/subscription/activate/?c={{context}} style="color:#F4F4F4;font-weight: bold; text-decoration: none;" target="_blank">Confirm email</a></button>
+                               <!--
+                               <button style="font-family:Roboto, Helvetica, Arial, sans-serif; font-weight:bold; font-size:18px;border-radius: 6px; background-color: #0076BC; color: #F4F4F4; cursor: pointer;" type="submit" name="email"><a href=http://localhost/api/subscription/activate/?c=c3d2c9d6-7e8c-4a75-8aa1-2f36a45a7e20 style="color:#F4F4F4;font-weight: bold; text-decoration: none;" target="_blank">Confirm email</a></button>
+                                -->
+                            </form>
+                         </div>
                     </td>
                 </tr>
             </tbody>
@@ -291,7 +300,7 @@
                         <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:10px;font-style:normal;font-weight:bold;text-align: center;color: rgba(79, 78, 78, 0.618);  height: 10px; width:600px; padding: 10px; background-color: #F4F4F4;">
                             <form action="" method="post">
                                 If you no longer wish to receive our emails, click here to
-                            <button style="border: none;font-family:Roboto, Helvetica, Arial, sans-serif; font-weight:bold; font-size:10px; background-color: #F4F4F4; color: red; cursor: pointer;" type="submit" name="email"><a href=http://localhost/api/subscription/unsubscribe/?c={{context}} style="color:#fb101095;font-weight: bold; text-decoration: none;" target="_blank">unsubscribe.</a></button>
+                                <button style="border: none;font-family:Roboto, Helvetica, Arial, sans-serif; font-weight:bold; font-size:10px; background-color: #F4F4F4; color: red; cursor: pointer;" type="submit" name="email"><a href=http://localhost/api/subscription/unsubscribe/?c=3eb8b500-d866-4e4b-aafd-2830cfea2849 style="color:#fb101095;font-weight: bold; text-decoration: none;" target="_blank">unsubscribe.</a></button>
                             </form>
                             </div>
                         <hr style="width: 600px; color: rgba(79, 78, 78, 0.618);border-color: rgba(0, 0, 0, 0.222)">
