Correçao dos templates html do subscription

--- a/backend/newsletter/templates/activate_subscription.html
+++ b/backend/newsletter/templates/activate_subscription.html
@@ -266,7 +266,7 @@
                          </div>
                         <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: center;color: rgb(79, 78, 78);  height: 40px; width:570px; padding: 10px; background-color: #F4F4F4;">
                            <form action="" method="post">
-                               <button style="font-family:Roboto, Helvetica, Arial, sans-serif; font-weight:bold; font-size:18px;border-radius: 6px; background-color: #0076BC; color: #F4F4F4; cursor: pointer;" type="submit" name="email"><a href=http://localhost/api/subscription/activate/?c={{context}} style="color:#F4F4F4;font-weight: bold; text-decoration: none;" target="_blank">Confirm email</a></button>
+                               <button style="font-family:Roboto, Helvetica, Arial, sans-serif; font-weight:bold; font-size:18px;border-radius: 6px; background-color: #0076BC; color: #F4F4F4; cursor: pointer;" type="submit" name="email"><a href=http://localhost/api/subscription/activate/?c=3eb8b500-d866-4e4b-aafd-2830cfea2849 style="color:#F4F4F4;font-weight: bold; text-decoration: none;" target="_blank">Confirm email</a></button>
                                <!--
                                <button style="font-family:Roboto, Helvetica, Arial, sans-serif; font-weight:bold; font-size:18px;border-radius: 6px; background-color: #0076BC; color: #F4F4F4; cursor: pointer;" type="submit" name="email"><a href=http://localhost/api/subscription/activate/?c=c3d2c9d6-7e8c-4a75-8aa1-2f36a45a7e20 style="color:#F4F4F4;font-weight: bold; text-decoration: none;" target="_blank">Confirm email</a></button>
                                 -->
