--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -1,3 +1,7 @@
+html {
+  height: -webkit-fill-available; /* We have to fix html height */
+}
+
 body {
   margin: 0;
   overflow-x: hidden;
@@ -6,6 +10,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #f4f4f4;
+
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+}
+
+#root {
+  height: 100%;
 }
 
 /* code {
