Ajustes na formataçao dos templates html

--- a/backend/newsletter/templates/unsubscription_confirm.html
+++ b/backend/newsletter/templates/unsubscription_confirm.html
@@ -18,10 +18,14 @@
             <table>
                 <tbody>
                     <tr class="row">
-                        <img src="https://tno-dev.linea.org.br/img/tno_logo_projetos.png" style="width:140px; margin: auto;" alt="tno_logo_projetos">
-                            <p class="col-md-12" style="font-family: Oxanium;font-weight: 100;font-size:18px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 70px; width:300px; padding: 10px; background-color: #0076BC;">LIneA Occultation Prediction Database
+                       <div style="margin: auto;">
+                            <img src="https://tno-dev.linea.org.br/img/tno_logo_projetos.png" style="width:140px; margin: auto;" alt="tno_logo_projetos">
+                        </div>
+                        <div class="col-md-12" style="text-align: center;">
+                            <p style="font-family: Oxanium;font-weight: 100;font-size:24px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 50px; width:500px; padding: 10px; background-color: #0076BC;">LIneA Occultation Prediction Database
                                 <h4 ng-non-bindable style="font-family: Oxanium; font-weight:bold">You&#x27;ve successfully unsubscribed from Solar System Portal journal messages</h4>
-                            </p>
+                            </p>  
+                        </div>
                             <!--
                             <p>Didn't mean to unsubscribe?</p>
                             <form action="/lists/encryptedResubscribe?token=1627610c3a6845988951459cbd28d02a&amp;messageId=3009475007084b15a5aa217648f55d09&amp;messageTypeId=50683&amp;messageTypeOnlyUnsubscribe=false&amp;encryptedUserKeys=KCg45Qrbr-dw0Iifxm8qALOmwYQjqW7GIUjj5TNoPjPZxUgzDkq75hslwGx2szGUhJTEO8Pg0ALt0xj5eH7I129rNVu9bqEGQhCrbjKv0lhmpTtglsW_dkAh3r58vZyGHLG3kymDsZRUN6T3KYvNWFQ9e_ImufxvOkQjbm0_LRRzXgxZVBNW1eOvO_Zz-zmojncfMRcjVIY8FDUvg0cDlFzmxQpV8euR3E9EwWr-d8t4xPB5ZLSqCi1ctwG3XCSU" class="form-horizontal" autocomplete= "off" method="POST">
