--- a/backend/newsletter/templates/activate_subscription.html
+++ b/backend/newsletter/templates/activate_subscription.html
@@ -169,7 +169,7 @@
                 </tr>
             </tbody>
         </table>
-    </div><!-- Termina baner logo TON-->
+    </div><!-- Termina baner logo TON--> 
     <!-- baner titulo -->
     <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
         <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
@@ -182,7 +182,7 @@
                 </tr>
             </tbody>
         </table>
-    </div><!--  Termina baner titulo-->
+    </div><!--  Termina baner titulo--> 
     <!-- baner texto do titulo -->
     <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
         <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
@@ -197,8 +197,8 @@
                 </tr>
             </tbody>
         </table>
-    </div><!-- baner texto do titulo -->
-    <!--  Termina baner-->
+    </div><!-- baner texto do titulo --> 
+    <!--  Termina baner--> 
     <!-- blank -->
     <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
         <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
@@ -224,8 +224,8 @@
                 </tr>
             </tbody>
         </table>
-    </div><!-- Termina titulo email -->
-    <!-- blank -->
+    </div><!-- Termina titulo email --> 
+    <!-- blank --> 
     <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
         <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
             <tbody>
@@ -245,41 +245,32 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:17px;font-style:normal;font-weight:normal;text-align: center;color: rgb(79, 78, 78);  height: 50px; width:600px; padding: 10px; background-color: #F4F4F4;">
-                            <strong>Customize your experience with our occultation prediction database!
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:18px;font-style:normal;font-weight:normal;text-align: center;color: rgb(79, 78, 78);  height: 90px; width:600px; padding: 10px; background-color: #F4F4F4;"><strong>Customize your experience with our occultation prediction database!
                         </strong>
                         </div>
                     </td>
                 </tr>
             </tbody>
         </table> <!--https://tno-dev.linea.org.br/prediction-event-detail/322829-->
-    </div><!-- Termina agradecimento-->
+    </div><!-- Termina agradecimento--> 
     <!-- paragrafo 1 -->
     <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
         <table align="center" border="0" cellpadding="15" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
             <tbody>
                 <tr>
                     <td style="width:100px;">
+                        <!--
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: justify;color: rgb(79, 78, 78);  height: 50px; width:570px; padding: 10px; background-color: #F4F4F4;">Stay informed about celestial phenomena by subscribing to receive personalized predictions of occultations by small Solar System bodies. With millions of events occurring annually, you can customize your subscription to align with your specific interests and geographic location. Take the opportunity to explore the cosmos with us by
+                            <a href="#" style="color:#FB1010;font-weight: bold; text-decoration: none;"  target="_blank">clicking here.</a> <br> 
+                            *** Aqui vem print da tela com formulario e instrucoes
+                        </div> -->
                         <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: center;color: rgb(79, 78, 78);  height: 40px; width:570px; padding: 10px; background-color: #F4F4F4;">
                             Stay informed about celestial phenomena by subscribing to receive personalized predictions of occultations by small Solar System bodies.<br>
                             First, confirm your subscription by clicking the link below:<br>
                          </div>
                         <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: center;color: rgb(79, 78, 78);  height: 40px; width:570px; padding: 10px; background-color: #F4F4F4;">
                            <form action="" method="post">
-                               <button
-                                style="font-family:Roboto, Helvetica, Arial, sans-serif; font-weight:bold; font-size:18px;border-radius: 6px; background-color: #0076BC; color: #F4F4F4; cursor: pointer;"
-                                type="submit"
-                                name="email">
-                                  <a
-                                    href={{host}}/api/subscription/activate/?c={{activation_code}}
-                                    style="color:#F4F4F4;font-weight: bold; text-decoration: none;"
-                                    target="_blank">
-                                      Confirm email
-                                    </a>
-                                </button>
-                               <!--
-                               <button style="font-family:Roboto, Helvetica, Arial, sans-serif; font-weight:bold; font-size:18px;border-radius: 6px; background-color: #0076BC; color: #F4F4F4; cursor: pointer;" type="submit" name="email"><a href=http://localhost/api/subscription/activate/?c=c3d2c9d6-7e8c-4a75-8aa1-2f36a45a7e20 style="color:#F4F4F4;font-weight: bold; text-decoration: none;" target="_blank">Confirm email</a></button>
-                                -->
+                               <button style="font-family:Roboto, Helvetica, Arial, sans-serif; font-weight:bold; font-size:18px;border-radius: 6px; background-color: #0076BC; color: #F4F4F4; cursor: pointer;" type="submit" name="email"><a href={{host}}/api/subscription/activate/?c={{activation_code}} style="color:#F4F4F4;font-weight: bold; text-decoration: none;" target="_blank">Confirm email</a></button>
                             </form>
                          </div>
                     </td>
@@ -310,9 +301,9 @@
                         <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:10px;font-style:normal;font-weight:bold;text-align: center;color: rgba(79, 78, 78, 0.618);  height: 10px; width:600px; padding: 10px; background-color: #F4F4F4;">
                             <form action="" method="post">
                                 If you no longer wish to receive our emails, click here to
-                                <button style="border: none;font-family:Roboto, Helvetica, Arial, sans-serif; font-weight:bold; font-size:10px; background-color: #F4F4F4; color: red; cursor: pointer;" type="submit" name="email"><a href={{host}}/api/subscription/unsubscribe/?c={{activation_code}} style="color:#fb101095;font-weight: bold; text-decoration: none;" target="_blank">unsubscribe.</a></button>
+                            <button style="border: none;font-family:Roboto, Helvetica, Arial, sans-serif; font-weight:bold; font-size:10px; background-color: #F4F4F4; color: red; cursor: pointer;" type="submit" name="email"><a href={{host}}/api/subscription/unsubscribe/?c={{activation_code}} style="color:#fb101095;font-weight: bold; text-decoration: none;" target="_blank">unsubscribe.</a></button>
                             </form>
-                            </div>
+                        </div>
                         <hr style="width: 600px; color: rgba(79, 78, 78, 0.618);border-color: rgba(0, 0, 0, 0.222)">
                     </td>
                 </tr>
@@ -353,6 +344,6 @@
             </tbody>
         </table>
     </div><!-- termina barra rodapé -->
-    <script src="script.js"></script>
+    <script src=""></script>
     </body>
 </html>
