--- a/backend/newsletter/templates/activation_confirm.html
+++ b/backend/newsletter/templates/activation_confirm.html
@@ -18,11 +18,14 @@
             <table>
                 <tbody>
                     <tr class="row">
-                        <img src="https://tno-dev.linea.org.br/img/tno_logo_projetos.png" style="width:140px; margin: auto;" alt="tno_logo_projetos">
-                            <p class="col-md-12" style="font-family: Oxanium;font-weight: 100;font-size:18px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 70px; width:300px; padding: 10px; background-color: #0076BC;">LIneA Occultation Prediction Database
+                        <div style="margin: auto;">
+                            <img src="https://tno-dev.linea.org.br/img/tno_logo_projetos.png" style="width:140px; margin: auto;" alt="tno_logo_projetos">
+                        </div>
+                        <div class="col-md-12" style="text-align: center;">
+                            <p style="font-family: Oxanium;font-weight: 100;font-size:24px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 50px; width:500px; padding: 10px; background-color: #0076BC;">LIneA Occultation Prediction Database
                                 <h4 ng-non-bindable style="font-family: Oxanium; font-weight:bold">Thanks!<br> You&#x27;ve successfully activated your subscription.</h4>
-                            </p
-                            >
+                            </p>  
+                        </div>
                             <!--
                             <img ng-non-bindable src="https://static.iterable.com/1627610c3a6845988951459cbd28d02a/23-08-30-8697689ae06c43d7b955af5c5be0f174" alt="" style="max-width:300px;height:auto;"/>
                             -->
@@ -40,3 +43,4 @@
         </div>
     </body>
 </html>
+
