Atualização dos textos nos emails de ativaçao, boas vindas e confirmações de ativação e descadastro

--- a/backend/newsletter/templates/activate_subscription.html
+++ b/backend/newsletter/templates/activate_subscription.html
@@ -264,11 +264,14 @@
                             <a href="#" style="color:#FB1010;font-weight: bold; text-decoration: none;"  target="_blank">clicking here.</a> <br> 
                             *** Aqui vem print da tela com formulario e instrucoes
                         </div> -->
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: center;color: rgb(79, 78, 78);  height: 40px; width:570px; padding: 10px; background-color: #F4F4F4;">
-                            Stay informed about celestial phenomena by subscribing to receive personalized predictions of occultations by small Solar System bodies.<br>
-                            First, confirm your subscription by clicking the link below:<br>
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;text-align: center;color: rgb(79, 78, 78);  height: 75px; width:570px; padding: 20px 10px; background-color: #F4F4F4;">
+                            Thanks for subscribing to the LIneA Occultation Prediction Database! We are excited to have you on board.
+                            <br>
+                            <br>
+                            To start receiving the customized information, simply click the button below to activate your account.
+                            <br>
                          </div>
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: center;color: rgb(79, 78, 78);  height: 40px; width:570px; padding: 10px; background-color: #F4F4F4;">
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: center;color: rgb(79, 78, 78);  height: 20px; width:570px; padding: 10px; background-color: #F4F4F4;">
                            <form action="" method="post">
                                <button style="font-family:Roboto, Helvetica, Arial, sans-serif; font-weight:bold; font-size:18px;border-radius: 6px; background-color: #0076BC; color: #F4F4F4; cursor: pointer;" type="submit" name="email"><a href={{host}}/api/subscription/activate/?c={{activation_code}} style="color:#F4F4F4;font-weight: bold; text-decoration: none;" target="_blank">Confirm email</a></button>
                             </form>
