--- a/backend/newsletter/templates/unsubscription_confirm.html
+++ b/backend/newsletter/templates/unsubscription_confirm.html
@@ -23,7 +23,7 @@
                         </div>
                         <div class="col-md-12" style="text-align: center;">
                             <p style="font-family: Oxanium;font-weight: 100;font-size:24px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 50px; width:500px; padding: 10px; background-color: #0076BC;">LIneA Occultation Prediction Database
-                                <h4 ng-non-bindable style="font-family: Oxanium; font-weight:bold">You&#x27;ve successfully unsubscribed from Solar System Portal journal messages</h4>
+                                <h4 ng-non-bindable style="font-family: Oxanium;">You have successfully unsubscribed from the LIneA Occultation Prediction Database.</h4>
                             </p>  
                         </div>
                             <!--
