--- a/backend/newsletter/templates/welcome.html
+++ b/backend/newsletter/templates/welcome.html
@@ -245,7 +245,7 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:18px;font-style:normal;font-weight:normal;text-align: center;color: rgb(79, 78, 78);  height: 90px; width:600px; padding: 10px; background-color: #F4F4F4;"><strong>Customize your experience with our occultation prediction database!
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:18px;font-style:normal;font-weight:normal;text-align: center;color: rgb(79, 78, 78);  height: 90px; width:600px; padding: 10px; background-color: #F4F4F4;"><strong>Customize your experience with our stellar occultation prediction database!
                         </strong>
                         </div>
                     </td>
@@ -259,7 +259,7 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: justify;color: rgb(79, 78, 78);  height: 50px; width:570px; padding: 10px; background-color: #F4F4F4;">Stay informed about celestial phenomena by subscribing to receive personalized predictions of occultations by small Solar System bodies. With millions of events occurring annually, you can customize your subscription to align with your specific interests and geographic location. Take the opportunity to explore the cosmos with us by
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;text-align: justify;color: rgb(79, 78, 78);  height: 50px; width:570px; padding: 10px; background-color: #F4F4F4;">You can choose specific objects, magnitude limits and many other options aligned with your particular interests and geographic location by
                             <a href="#" style="color:#FB1010;font-weight: bold; text-decoration: none;"  target="_blank">clicking here.</a> <br>
                             <!--*** Aqui vem print da tela com formulario e instrucoes-->
                         </div>
