--- a/backend/newsletter/templates/results_not_found.html
+++ b/backend/newsletter/templates/results_not_found.html
@@ -1,158 +1,14 @@
 <!doctype html>
 <html>
 <head>
-    <title></title><!--[if !mso]>-->
-    <meta http-equiv="X-UA-Compatible" content="IEedge"><!--<![endif]-->
+    <title></title>
+    <meta http-equiv="X-UA-Compatible" content="IEedge">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=3Ddevice-width,initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxanium|Roboto:300,400,500,700&display=swap"/>
-    <style type="text/css">
-        #outlook a {
-            padding: 0;
-        }
-
-        body {
-            margin: 0;
-            padding: 0;
-            -webkit-text-size-adjust: 100%;
-            -ms-text-size-adjust: 100%;
-        }
-
-        table,
-        td {
-            border-collapse: collapse;
-            /*mso-table-lspace: 0pt;
-            mso-table-rspace: 0pt;*/
-        }
-
-        img {
-            border: 0;
-            height: auto;
-            line-height: 100%;
-            outline: none;
-            text-decoration: none;
-            -ms-interpolation-mode: bicubic;
-        }
-
-        p {
-            display: block;
-            margin: 13px 0;
-        }
-    </style>
-    <style type="text/css">
-        @media only screen and (min-width:480px) {
-            .mj-column-per-100 {
-                width: 100% !important;
-                max-width: 100%;
-            }
-
-            .mj-column-per-15 {
-                width: 15% !important;
-                max-width: 15%;
-            }
-
-            .mj-column-per-85 {
-                width: 85% !important;
-                max-width: 85%;
-            }
-        }
-    </style>
-    <style type="text/css">
-        @media only screen and (max-width:480px) {
-            table.mj-full-width-mobile {
-                width: 100% !important;
-            }
-
-            td.mj-full-width-mobile {
-                width: auto !important;
-            }
-        }
-    </style>
-    <style type="text/css">
-        .body-subtitle div {
-            font-size: 17px !important;
-        }
-
-        .body-title div {
-            font-size: 25px !important;
-        }
-
-        .header-title div {
-            font-size: 25px !important;
-        }
-
-        .body-normal div {
-            font-size: 17px !important;
-        }
-
-        .body-bullets div {
-            font-size: 25px !important;
-        }
-
-        .body-blog div {
-            font-size: 20px !important;
-        }
-
-        .body-footer div {
-            font-size: 18px !important;
-        }
-
-        .body-footer-legal div {
-            font-size: 24px !important;
-        }
-
-        .button-white a {
-            font-size: 17px !important;
-        }
-
-        .link-none {
-            text-decoration: none;
-            color: FFFFFF;
-        }
-
-        @media only screen and (max-width: 480px) {
-
-            .body-subtitle div {
-                font-size: 11px !important;
-            }
-
-            .body-title div {
-                font-size: 15px !important;
-            }
-
-            .header-title div {
-                font-size: 15px !important;
-            }
-
-            .body-normal div {
-                font-size: 14px !important;
-            }
-
-            .body-bullets div {
-                font-size: 16px !important;
-            }
-
-            .body-blog div {
-                font-size: 12px !important;
-            }
-
-            .body-footer div {
-                font-size: 15px !important;
-            }
-
-            .body-footer-legal div {
-                font-size: 18px !important;
-            }
-
-            .button-white a {
-                font-size: 15px !important;
-            }
-
-        }
-    </style>
 </head>
 <body style="background-color:#E5E5E5;">
     <!-- Baner logo TON -->
@@ -197,45 +53,19 @@
         </table>
     </div><!-- baner texto do titulo --> 
     <!--  Termina baner--> 
-    <!-- blank -->
-    <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
-        <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
-            <tbody>
-                <tr>
-                    <td style="width:100px;">
-                        <div style="text-align: center;color:#E5E5E5;  height: 10px; width:600px; padding: 10px; background-color: #F4F4F4;">
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div><!-- termina blank -->
     <!-- titulo email -->
     <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
-        <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
+        <table align="center" border="0" cellpadding="15" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: justify;color:#212121;  height: 40px; width:600px; padding: 10px; background-color: #F4F4F4;">Your customized occultation predicitions for [Semester Year/Month Year/Week Month Year]
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: justify;color:#212121;  height: 40px; width:570px; padding: 10px; background-color: #F4F4F4;">Your customized occultation predicitions for [Semester Year/Month Year/Week Month Year]
                         </div>
                     </td>
                 </tr>
             </tbody>
         </table>
     </div><!-- Termina titulo email --> 
-    <!-- blank --> 
-    <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
-        <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
-            <tbody>
-                <tr>
-                    <td style="width:100px;">
-                        <div style="text-align: center;color:#E5E5E5;  height: 10px; width:600px; padding: 10px; background-color: #F4F4F4;">
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div><!-- Termina blank -->
     <!-- Corpo do email -->
     <!-- Paragrafo agradecimento -->
     <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
@@ -243,13 +73,13 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: justify;color: rgb(79, 78, 78);  height: 50px; width:570px; padding: 10px; background-color: #F4F4F4;"><strong>Dear [Subscriber],
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;text-align: justify;color: rgb(79, 78, 78);  height: 50px; width:570px; padding: 10px; background-color: #F4F4F4;"><strong>Dear [Subscriber],
                         </strong>
                         </div>
                     </td>
                 </tr>
             </tbody>
-        </table> <!--https://tno-dev.linea.org.br/prediction-event-detail/322829-->
+        </table>
     </div><!-- Termina agradecimento--> 
     <!-- paragrafo 1 -->
     <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
@@ -257,8 +87,8 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: justify;color: rgb(79, 78, 78);  height: 50px; width:570px; padding: 10px; background-color: #F4F4F4;">We have found no events with your customized occultation predictions for the upcoming period. Should you wish to adjust your filter parameters, you can do so
-                            <a href="#" style="color:#FB1010;font-weight: bold; text-decoration: none;"  target="_blank">[HERE].</a><br><br>Yours sincerely,<br>
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;text-align: justify;color: rgb(79, 78, 78);  height: 150px; width:570px; padding: 10px; background-color: #F4F4F4;">We have found no events with your customized occultation predictions for the upcoming period. Should you wish to adjust your filter parameters, you can do so
+                            <a href="#" style="color:#FB1010; text-decoration: none;"  target="_blank">here.</a><br><br>Yours sincerely,<br>
                             LIneA Team
                         </div>
                     </td>
@@ -266,19 +96,6 @@
             </tbody>
         </table>
     </div><!-- termina paragrafo 1 -->
-    <!-- blank -->
-    <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
-        <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
-            <tbody>
-                <tr>
-                    <td style="width:100px;">
-                        <div style="text-align: center;color:#E5E5E5;  height: 80px; width:600px; padding: 10px; background-color: #F4F4F4;">
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div><!-- blank -->
     <!-- paragrafo descadastrar -->
     <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
         <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
@@ -286,7 +103,7 @@
                 <tr>
                     <td style="width:100px;">
                         <hr style="width: 600px; color: rgba(79, 78, 78, 0.618);border-color: rgba(0, 0, 0, 0.222)">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:10px;font-style:normal;font-weight:bold;text-align: center;color: rgba(79, 78, 78, 0.618);  height: 10px; width:600px; padding: 10px; background-color: #F4F4F4;">If you no longer wish to receive our emails, click here to <a href="#" style="color:#fb101095;font-weight: bold; text-decoration: none;" target="_blank">unsubscribe.</a> 
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:10px;font-style:normal;font-weight:bold;text-align: center;color: rgba(79, 78, 78, 0.618);  height: 10px; width:600px; padding: 10px; background-color: #F4F4F4;">If you no longer wish to receive our emails, click here to <a href={{host}}/api/subscription/unsubscribe/?c={{activation_code}} style="color:#fb101095;font-weight: bold; text-decoration: none;" target="_blank">unsubscribe.</a> 
                         </div>
                         <hr style="width: 600px; color: rgba(79, 78, 78, 0.618);border-color: rgba(0, 0, 0, 0.222)">
                     </td>
