Inclusao do link para acessar acessar a pagina de filtro

--- a/backend/newsletter/templates/welcome.html
+++ b/backend/newsletter/templates/welcome.html
@@ -103,7 +103,7 @@
                 <tr>
                     <td style="width:100px;">
                         <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;text-align: justify;color: rgb(79, 78, 78);  height: 50px; width:570px; padding: 10px; background-color: #F4F4F4;">You can choose specific objects, magnitude limits and many other options aligned with your particular interests and geographic location by
-                            <a href="#" style="color:#FB1010;font-weight: bold; text-decoration: none;"  target="_blank">clicking here.</a> <br>
+                            <a href="{{host}}/newsletter_settings/?{{activation_code}}" style="color:#FB1010;font-weight: bold; text-decoration: none;" target="_blank">clicking here.</a> <br>
                             <!--*** Aqui vem print da tela com formulario e instrucoes-->
                         </div>
                     </td>
