Passwordless authentication has been implemented. Login page and navigation bar have been added.

--- a/backend/newsletter/templates/activate_subscription.html
+++ b/backend/newsletter/templates/activate_subscription.html
@@ -69,7 +69,7 @@
         </table>
     </div><!-- termina blank -->
     <!-- titulo email -->
-    <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
+    <!-- <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
         <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
             <tbody>
                 <tr>
@@ -80,10 +80,11 @@
                 </tr>
             </tbody>
         </table>
-    </div><!-- Termina titulo email --> 
+    </div> -->
+    <!-- Termina titulo email --> 
     <!-- Corpo do email -->
     <!-- Paragrafo agradecimento -->
-    <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
+    <!-- <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
         <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
             <tbody>
                 <tr>
@@ -94,19 +95,15 @@
                     </td>
                 </tr>
             </tbody>
-        </table> <!--https://tno-dev.linea.org.br/prediction-event-detail/322829-->
-    </div><!-- Termina agradecimento--> 
+        </table>
+    </div> -->
+    <!-- Termina agradecimento--> 
     <!-- paragrafo 1 -->
     <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
         <table align="center" border="0" cellpadding="15" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <!--
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: justify;color: rgb(79, 78, 78);  height: 50px; width:570px; padding: 10px; background-color: #F4F4F4;">Stay informed about celestial phenomena by subscribing to receive personalized predictions of occultations by small Solar System bodies. With millions of events occurring annually, you can customize your subscription to align with your specific interests and geographic location. Take the opportunity to explore the cosmos with us by
-                            <a href="#" style="color:#FB1010;font-weight: bold; text-decoration: none;"  target="_blank">clicking here.</a> <br> 
-                            *** Aqui vem print da tela com formulario e instrucoes
-                        </div> -->
                         <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;text-align: center;color: rgb(79, 78, 78);  height: 75px; width:570px; padding: 20px 10px; background-color: #F4F4F4;">
                             Thanks for subscribing to the LIneA Occultation Prediction Database! We are excited to have you on board.
                             <br>
