--- a/backend/newsletter/templates/activate_subscription.html
+++ b/backend/newsletter/templates/activate_subscription.html
@@ -39,8 +39,9 @@
             </tbody>
         </table>
     </div><!--  Termina baner titulo-->
+
     <!-- baner texto do titulo -->
-    <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
+    <!-- <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
         <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
             <tbody>
                 <tr>
@@ -53,8 +54,9 @@
                 </tr>
             </tbody>
         </table>
-    </div><!-- baner texto do titulo -->
+    </div>baner texto do titulo -->
     <!--  Termina baner-->
+
     <!-- blank -->
     <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
         <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
@@ -105,11 +107,7 @@
                 <tr>
                     <td style="width:100px;">
                         <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;text-align: center;color: rgb(79, 78, 78);  height: 75px; width:570px; padding: 20px 10px; background-color: #F4F4F4;">
-                            Thanks for subscribing to the LIneA Occultation Prediction Database! We are excited to have you on board.
-                            <br>
-                            <br>
-                            To start receiving the customized information, simply click the button below to activate your account.
-                            <br>
+                            Thanks for subscribing to the LIneA Occultation Prediction Database. We are excited to have you on board. Before you start receiving customized predictions we need to activate your account. Click the button below to proceed.
                          </div>
                         <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: center;color: rgb(79, 78, 78);  height: 40px; width:570px; padding: 10px; background-color: #F4F4F4;">
                            <form action="" method="post">
