refactor(activate_subscritpion.html): atualizacao da pagina de ativacao de subscricao

--- a/backend/newsletter/templates/activate_subscription.html
+++ b/backend/newsletter/templates/activate_subscription.html
@@ -112,8 +112,11 @@
                         <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: center;color: rgb(79, 78, 78);  height: 40px; width:570px; padding: 10px; background-color: #F4F4F4;">
                            <form action="" method="post">
                                <button style="font-family:Roboto, Helvetica, Arial, sans-serif; font-weight:bold; font-size:18px;border-radius: 6px; background-color: #0076BC; color: #F4F4F4; cursor: pointer;" type="submit" name="email"><a href={{host}}/api/subscription/activate/?c={{activation_code}} style="color:#F4F4F4;font-weight: bold; text-decoration: none;" target="_blank">Confirm email</a></button>
-                            </form>
-                         </div>
+                           </form>
+                        </div>
+                        <div>
+                            Or copy and paste the following link on your internet browser: {{host}}/api/subscription/activate/?c={{activation_code}}
+                        </div>
                     </td>
                 </tr>
             </tbody>
