--- a/backend/newsletter/templates/activate_subscription.html
+++ b/backend/newsletter/templates/activate_subscription.html
@@ -19,7 +19,7 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family: Oxanium;font-weight: 100;font-size:23px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 50px; width:600px; padding: 10px; background-color: #0076BC;"><img style="width: 70px;" src="https://solarsystem.linea.org.br/img/tno_logo_projetos.png" alt="">
+                        <div style="font-family: Oxanium;font-weight: 100;font-size:23px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 60px; width:600px; padding: 10px; background-color: #0076BC;"><img style="width: 70px;" src="https://solarsystem.linea.org.br/img/tno_logo_projetos.png" alt="">
                         </div>
                     </td>
                 </tr>
@@ -32,7 +32,7 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family: Oxanium;font-weight: 100;font-size:23px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 30px; width:600px; padding: 10px; background-color: #0076BC;">LIneA Occultation Prediction Database
+                        <div style="font-family: Oxanium;font-weight: 100;font-size:23px;font-style:normal;font-weight:normal;text-align: center;color:#E5E5E5;  height: 60px; width:600px; padding: 10px; background-color: #0076BC;">LIneA Occultation Prediction Database
                         </div>
                     </td>
                 </tr>
@@ -106,16 +106,15 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;text-align: center;color: rgb(79, 78, 78);  height: 75px; width:570px; padding: 20px 10px; background-color: #F4F4F4;">
-                            Thanks for subscribing to the LIneA Occultation Prediction Database. We are excited to have you on board. Before you start receiving customized predictions we need to activate your account. Click the button below to proceed.
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;text-align: center;color: rgb(79, 78, 78);  height: 75px; width:570px; padding: 20px 10px; background-color: #F4F4F4;">
+                            Thank you for subscribing to the LIneA Occultation Prediction Database. We are excited to have you on board. Before you start receiving customized predictions, we need to activate your account. Please click the button below to proceed.
                          </div>
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: center;color: rgb(79, 78, 78);  height: 40px; width:570px; padding: 10px; background-color: #F4F4F4;">
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:normal;text-align: center;color: rgb(79, 78, 78);  height: 75px; width:570px; padding: 10px; background-color: #F4F4F4;">
                            <form action="" method="post">
-                               <button style="font-family:Roboto, Helvetica, Arial, sans-serif; font-weight:bold; font-size:18px;border-radius: 6px; background-color: #0076BC; color: #F4F4F4; cursor: pointer;" type="submit" name="email"><a href={{host}}/api/subscription/activate/?c={{activation_code}} style="color:#F4F4F4;font-weight: bold; text-decoration: none;" target="_blank">Confirm email</a></button>
+                               <button style="font-family:Roboto, Helvetica, Arial, sans-serif; font-weight:normal; font-size:18px;border-radius: 6px; background-color: #0076BC; color: #F4F4F4; cursor: pointer;" type="submit" name="email"><a href={{host}}/api/subscription/activate/?c={{activation_code}} style="color:#F4F4F4;font-weight: normal; text-decoration: none;" target="_blank">Activate Account</a></button>
+                               <br>
+
                            </form>
-                        </div>
-                        <div>
-                            Or copy and paste the following link on your internet browser: {{host}}/api/subscription/activate/?c={{activation_code}}
                         </div>
                     </td>
                 </tr>
@@ -123,6 +122,7 @@
         </table>
     </div><!-- termina paragrafo 1 -->
     <!-- paragrafo descadastrar -->
+     <!--
     <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
         <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
             <tbody>
@@ -140,7 +140,8 @@
                 </tr>
             </tbody>
         </table>
-    </div><!-- termina paragrafo descadastrar -->
+    </div>-->
+    <!-- termina paragrafo descadastrar -->
     <!--  footer -->
     <!--  supporters -->
     <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
@@ -148,8 +149,8 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="text-align: center;color: rgb(79, 78, 78);  height: 76px; width:600px; padding: 10px; background-color: #F4F4F4;">
-                            <span style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:15px;font-style:normal;font-weight:bold;text-align: center;color: rgb(79, 78, 78); width:600px; padding: 10px; background-color: #F4F4F4;">LIneA is supported by</span><br>
+                        <div style="text-align: center;color: rgb(79, 78, 78);  height: 78px; width:600px; padding: 10px; background-color: #F4F4F4;">
+                            <span style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:13px;font-style:normal;font-weight:normal;text-align: center;color: rgb(79, 78, 78); width:600px; padding: 10px; background-color: #F4F4F4;">LIneA is supported by</span><br>
                             <img style="width: 90px; padding: 8px;" src="https://solarsystem.linea.org.br/img/supporters/capes.png" alt="">
                             <img style="width: 90px; padding: 8px;" src="https://solarsystem.linea.org.br/img/supporters/cnpq.png" alt="">
                             <img style="width: 90px; padding: 8px;" src="https://solarsystem.linea.org.br/img/supporters/faperj.png" alt="">
