refactor(backend/newsletter/templates/activate_subscription.html): Alteração no layout do template html activate_subscription

--- a/backend/newsletter/templates/activate_subscription.html
+++ b/backend/newsletter/templates/activate_subscription.html
@@ -39,24 +39,7 @@
             </tbody>
         </table>
     </div><!--  Termina baner titulo-->
-
-    <!-- baner texto do titulo -->
-    <!-- <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
-        <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
-            <tbody>
-                <tr>
-                    <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:10px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 70px; width:600px; padding: 10px; background-color: #0076BC;">This is a database of predictions for stellar occultations by small <br> Solar System objects, calculated from the legacy
-                            positions provided <br> by the Dark Energy Survey (DES) and the constantly updated <br> positions from the Minor Planet Center (MPC).
-                            These predictions are <br> regularly updated. Use our advanced filters to refine your search and <br> find more suitable events.
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>baner texto do titulo -->
     <!--  Termina baner-->
-
     <!-- blank -->
     <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
         <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
@@ -70,36 +53,6 @@
             </tbody>
         </table>
     </div><!-- termina blank -->
-    <!-- titulo email -->
-    <!-- <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
-        <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
-            <tbody>
-                <tr>
-                    <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:18px;font-style:normal;font-weight:bold;text-align: left;color: rgb(79, 78, 78);  height: 60px; width:580px; padding: 10px; padding-left: 30px; background-color: #F4F4F4;">Greetings,
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div> -->
-    <!-- Termina titulo email -->
-    <!-- Corpo do email -->
-    <!-- Paragrafo agradecimento -->
-    <!-- <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
-        <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
-            <tbody>
-                <tr>
-                    <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:18px;font-style:normal;font-weight:normal;text-align: center;color: rgb(79, 78, 78);  height: 90px; width:600px; padding: 10px; background-color: #F4F4F4;"><strong>Customize your experience with our occultation prediction database!
-                        </strong>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div> -->
-    <!-- Termina agradecimento-->
     <!-- paragrafo 1 -->
     <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
         <table align="center" border="0" cellpadding="15" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
@@ -121,27 +74,6 @@
             </tbody>
         </table>
     </div><!-- termina paragrafo 1 -->
-    <!-- paragrafo descadastrar -->
-     <!--
-    <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
-        <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
-            <tbody>
-                <tr>
-                    <td style="width:100px;">
-                        <hr style="width: 600px; color: rgba(79, 78, 78, 0.618);border-color: rgba(0, 0, 0, 0.222)">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:10px;font-style:normal;font-weight:bold;text-align: center;color: rgba(79, 78, 78, 0.618);  height: 10px; width:600px; padding: 10px; background-color: #F4F4F4;">
-                            <form action="" method="post">
-                                If you no longer wish to receive our emails, click here to
-                            <button style="border: none;font-family:Roboto, Helvetica, Arial, sans-serif; font-weight:bold; font-size:10px; background-color: #F4F4F4; color: red; cursor: pointer;" type="submit" name="email"><a href={{host}}/api/subscription/email_unsubscribe/?c={{activation_code}} style="color:#fb101095;font-weight: bold; text-decoration: none;" target="_blank">unsubscribe.</a></button>
-                            </form>
-                        </div>
-                        <hr style="width: 600px; color: rgba(79, 78, 78, 0.618);border-color: rgba(0, 0, 0, 0.222)">
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>-->
-    <!-- termina paragrafo descadastrar -->
     <!--  footer -->
     <!--  supporters -->
     <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
@@ -168,7 +100,7 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif, 'Arial Narrow', Arial, sans-serif;font-size:20px;font-style:normal;font-weight:bold;text-align: right;color:#E5E5E5;  height: 35px; width:600px; padding: 10px; background-color: #0076BC;">Powered by
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif, 'Arial Narrow', Arial, sans-serif;font-size:20px;font-style:normal;font-weight:bold;text-align: right;color:#E5E5E5;  height: 100%; width:600px; padding: 10px; background-color: #0076BC;">Powered by
                         <a href="http://www.linea.org.br/"><img style="width: 50px;" src="https://solarsystem.linea.org.br/static/media/linea-logo-mini.af872eca151f1ecc55b4.png" alt=""></a>
                         </div>
                     </td>
