--- a/backend/newsletter/templates/unsubscription_confirm.html
+++ b/backend/newsletter/templates/unsubscription_confirm.html
@@ -1,34 +1,75 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title ng-non-bindable>Unsubscribe Confirmation</title>
-        <meta name="description" content="Unsubscribe" ng-non-bindable>
-        <meta name="viewport" content="width=device-width, maximum-scale=1, user-scalable=no">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxanium|Roboto:300,400,500,700&display=swap"/>
-         <link rel="stylesheet" ng-non-bindable media="screen" href="https://assets.iterable.com/static/iterable-s3/vendor.470fa39ed60a6bbd900e.css.gz"/>
-    </head>
-    <body>
-        <div id="login" class="container unsubscribe">
-            <table>
-                <tbody>
-                    <tr class="row">
-                       <div style="margin: auto;">
-                            <img src="https://tno-dev.linea.org.br/img/tno_logo_projetos.png" style="width:140px; margin: auto;" alt="tno_logo_projetos">
-                        </div>
-                        <div class="col-md-12" style="text-align: center;">
-                            <p style="font-family: Oxanium;font-weight: 100;font-size:24px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 50px; width:500px; padding: 10px; background-color: #0076BC;">LIneA Occultation Prediction Database
-                                <h4 ng-non-bindable style="font-family: Oxanium;">You have successfully unsubscribed from the LIneA Occultation Prediction Database.</h4>
-                            </p>
-                        </div>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title ng-non-bindable>Subscribe Confirmation</title>
+    <meta name="description" content="Unsubscribe" ng-non-bindable />
+    <meta
+      name="viewport"
+      content="width=device-width, maximum-scale=1, user-scalable=no"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Oxanium|Roboto:300,400,500,700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      ng-non-bindable
+      media="screen"
+      href="https://assets.iterable.com/static/iterable-s3/vendor.470fa39ed60a6bbd900e.css.gz"
+    />
+  </head>
+  <body>
+    <div id="login">
+      <table>
+        <tbody>
+          <tr class="row">
+            <div style="margin: auto">
+              <img
+                src="https://tno-dev.linea.org.br/img/tno_logo_projetos.png"
+                style="width: 140px; margin: auto"
+                alt="tno_logo_projetos"
+              />
+            </div>
+            <div style="text-align: center; margin: auto">
+              <p
+                style="
+                  font-family: Oxanium;
+                  font-weight: 100;
+                  font-size: 24px;
+                  font-style: normal;
+                  font-weight: normal;
+                  text-align: center;
+                  color: #e5e5e5;
+                  height: 50px;
+                  width: 470px;
+                  padding: 10px;
+                  background-color: #0076bc;
+                "
+              >
+                LIneA Occultation Prediction Database
+              </p>
+              <p
+                style="
+                  font-family: Roboto, Helvetica, Arial, sans-serif;
+                  font-weight: normal;
+                  font-size: 16px;
+                "
+              >
+                Thanks! You have successfully unsubscribed from the <br />LIneA
+                Occultation Prediction Database.
+              </p>
+            </div>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </body>
 </html>
