refactor(backend/newsletter/templates/welcome.html): Redução dos espaços no layout do arquivo welcome

--- a/backend/newsletter/templates/welcome.html
+++ b/backend/newsletter/templates/welcome.html
@@ -59,7 +59,7 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:normal;text-align: left;color: rgb(79, 78, 78);  height: 60px; width:580px; padding: 10px; padding-left: 30px; background-color: #F4F4F4;">Greetings,
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:normal;text-align: left;color: rgb(79, 78, 78);  height: 40px; width:580px; padding: 10px; padding-left: 30px; background-color: #F4F4F4;">Greetings,
                         </div>
                     </td>
                 </tr>
@@ -73,7 +73,7 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;text-align: center;color: rgb(79, 78, 78);  height: 90px; width:600px; padding: 10px; background-color: #F4F4F4;">Customize your experience with our stellar occultation prediction database!
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;text-align: center;color: rgb(79, 78, 78);  height: 20px; width:600px; padding: 10px; background-color: #F4F4F4;">Customize your experience with our stellar occultation prediction database!
                         </div>
                     </td>
                 </tr>
@@ -85,7 +85,7 @@
         <table align="center" border="0" cellpadding="15" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
             <tbody>
                 <tr>
-                    <td style="width:100px;">
+                    <td style="width:95px;">
                         <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;text-align: justify;color: rgb(79, 78, 78);  height: 50px; width:570px; padding: 10px; background-color: #F4F4F4;">You can choose specific objects, magnitude limits and many other options aligned with your particular interests and geographic location by
                             <a href="{{host}}/newsletter_settings/" style="color:#FB1010;font-weight: normal; text-decoration: none;" target="_blank">clicking here.</a> <br>
                             <!--*** Aqui vem print da tela com formulario e instrucoes-->
@@ -140,8 +140,9 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif, 'Arial Narrow', Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: right;color:#E5E5E5;  height: 100%; width:600px; padding: 10px; background-color: #0076BC;">Powered by
-                        <a href="http://www.linea.org.br/"><img style="width: 50px;" src="https://solarsystem.linea.org.br/static/media/linea-logo-mini.af872eca151f1ecc55b4.png" alt=""></a>
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif, 'Arial Narrow', Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: right;color:#E5E5E5;  height: 100%; width:600px; padding: 10px; background-color: #0076BC;">
+                            <span style="padding-bottom: 0px;">Powered by</span>
+                            <a href="http://www.linea.org.br/"><img style="width: 60px;" src="https://solarsystem.linea.org.br/static/media/linea-logo-mini.af872eca151f1ecc55b4.png" alt=""></a>
                         </div>
                     </td>
                 </tr>
