refactor(backend/newsletter/templates/results.html): Alinhamento da logo no rodape do template results

--- a/backend/newsletter/templates/results.html
+++ b/backend/newsletter/templates/results.html
@@ -233,8 +233,9 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:bold;text-align: right;color:#E5E5E5;  height: 100%; width:600px; padding: 10px; background-color: #0076BC;">Powered by
-                        <a href="http://www.linea.org.br/"><img style="width: 60px;" src="https://solarsystem.linea.org.br/static/media/linea-logo-mini.af872eca151f1ecc55b4.png" alt=""></a>
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif, 'Arial Narrow', Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: right;color:#E5E5E5;  height: 100%; width:600px; padding: 10px; background-color: #0076BC;">
+                            <span style="display: inline-block; vertical-align: middle;">Powered by</span>
+                            <a style="display: inline-block; vertical-align: middle;" href="http://www.linea.org.br/"><img style="width: 60px;" src="https://solarsystem.linea.org.br/static/media/linea-logo-mini.af872eca151f1ecc55b4.png" alt=""></a>
                         </div>
                     </td>
                 </tr>
