--- a/frontend/src/pages/PredictionEvents/partials/OcultationMap/map.module.css
+++ b/frontend/src/pages/PredictionEvents/partials/OcultationMap/map.module.css
@@ -1,6 +1,16 @@
 .map {
-  height: 80vh;
-  width: 100%;
+  height: 170px;
+  /*height: 80vh;
+  width: 100%;*/
+  width: 250px;
+  /*margin: auto;*/
+  border-radius: 15px;
+}
+.mapThumbs {
+  height: 170px;
+  /*height: 80vh;
+  width: 100%;*/
+  width: 250px;
   /*margin: auto;*/
   border-radius: 15px;
 }
@@ -15,16 +25,16 @@
     border-radius: 15px;
     md={6} sm={5}
  }*/
-
+/*
 @media print {
   .map {
     height: 200px;
     width: 100%;
-    /*margin: auto;*/
+    margin: auto;
     border-radius: 15px;
   }
   .mapPrint {
-    /*size: 100px 100px;*/
+    size: 100px 100px;
     height: 200px;
   }
-}
+}*/
