--- a/backend/newsletter/templates/results.html
+++ b/backend/newsletter/templates/results.html
@@ -171,7 +171,7 @@
                                             <td> <!-- card com descricao do mapa 1 -->
                                                 {% for durations in duration %}
                                                     <div style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 10px;">
-                                                        <a style="text-align: center; text-decoration: none;font-size: 11px;" href="#">Download</a>
+                                                        <a style="text-align: center; text-decoration: none;font-size: 11px;" href="{{host}}/archive/newsletter/{{filter_name}}_results_filter_newsletter.csv">Download</a>
                                                     </div>
                                                 {% endfor %}
                                             </td>
