style(backend/newsletter/templates/results.html): Ajuste no layout do template html

--- a/backend/newsletter/templates/results.html
+++ b/backend/newsletter/templates/results.html
@@ -126,7 +126,7 @@
                                                     {{dates}}
                                                 {% endfor %}
                                             </td>
-                                            <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 35px ;">
+                                            <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 40px ;">
                                                 {% for names in name %}
                                                     {{names}}
                                                 {% endfor %}
@@ -140,9 +140,9 @@
                                                     {% endif %}
                                                 {% endfor %}
                                             </td>
-                                            <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 40px ;">
+                                            <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 45px ;">
                                                 {% for velocs in veloc %}
-                                                    {{velocs}} km/s
+                                                    {{velocs}} km/s <br>
                                                 {% endfor %}
                                             </td>
                                             <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 40px ;">
